packages/cashc/test/syntax/success/num2bin.cash
contract Test() {
    function hello() {
        bytes2 byte = bytes2(10);
        require(int(byte) == 10);
    }
}
