packages/cashc/test/syntax/fail/bytes0.cash
contract Test() {
    function hello() {
        bytes0 byte = bytes0(10);
        require(int(byte) == 10);
    }
}
